--- a/src/styles/customer.css
+++ b/src/styles/customer.css
@@ -23,6 +23,7 @@ header h2 {
 
 header button {
   padding: 10px 18px;
+  margin-left: 15px;
   border-radius: 12px;
   border: none;
   background: linear-gradient(135deg, #f43f5e, #c026d3);
@@ -132,4 +133,9 @@ header button:active {
 
 .card button.danger:active {
   transform: translateY(1px);
+}
+.price {
+  font-weight: 600;
+  margin-top: 6px;
+  color: #2ecc71;
 }
